--- a/milestone2/Milestone2.ipynb
+++ b/milestone2/Milestone2.ipynb
@@ -10,9 +10,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "53603823",
+   "metadata": {},
+   "source": [
+    "### Import packages for preprocess"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1e7f0e48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from scipy import stats\n",
+    "\n",
+    "sns.set()\n",
+    "sns.set_style(\"whitegrid\")\n",
+    "colors = sns.color_palette(\"colorblind\", 16)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "603fd1b3",
+   "metadata": {},
+   "source": [
+    "### Import Dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32715047",
+   "id": "4fd33203",
    "metadata": {},
    "outputs": [],
    "source": []
