create BeerAdvocate folder

--- a/milestone2/Milestone2.ipynb
+++ b/milestone2/Milestone2.ipynb
@@ -49,7 +49,9 @@
    "id": "4fd33203",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "DATA_FOLDER = 4"
+   ]
   }
  ],
  "metadata": {
