added file Lola for milestone2.2

--- a/milestone2/Milestone2.ipynb
+++ b/milestone2/Milestone2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "34077a12",
+   "id": "326d464a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e0021842",
+   "id": "92712291",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "621c0265",
+   "id": "d21ced2c",
    "metadata": {},
    "source": [
     "The purpose of the following analysis was to observe where the beers that each user rates are brewed and which beer styles are prefered by each user depending on the nationality of the user. "
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "454ac21a",
+   "id": "eba2be8e",
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "18b707c9",
+   "id": "f6a10c08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f1cdf1bd",
+   "id": "7bc1384e",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9fe70ca6",
+   "id": "3cb69ab9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9adfe7a1",
+   "id": "344a8330",
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6111894d",
+   "id": "13bcad1b",
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ad5c82be",
+   "id": "3b13f3fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "44efa574",
+   "id": "f8322984",
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +784,7 @@
     }
    ],
    "source": [
-    "# merge df_ba_merged with df_users to get country of origin\n",
+    "# merge df_ba_merged with df_users to get country of origin of user\n",
     "df_ba_user = df_ba_merged.merge(df_users[['user_nbr_ratings','user_nbr_reviews','user_id','user_country']], left_on='user_id', right_on='user_id')\n",
     "df_ba_user.head()"
    ]
@@ -792,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "4f0d6e93",
+   "id": "289084b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5cb6bb01",
+   "id": "5f85e1c1",
    "metadata": {},
    "outputs": [
     {
@@ -968,34 +968,35 @@
     }
    ],
    "source": [
+    "# example for one user\n",
     "users_dict['badbeer.25091'].head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "fb152785",
+   "id": "69df06a7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# summerize the dictionary into a new dataframe \n",
-    "users_summary = pd.DataFrame(columns=['user','total_ba_ratings','country', 'main_country', 'nbr_countries', 'fav_country', 'main_style', 'nbr_styles','fav_style','nbr_ratings'])\n",
+    "users_summary = pd.DataFrame(columns=['user','total_ba_ratings','country', 'main_country_rated', 'nbr_countries_rated', 'fav_country', 'main_style_rated', 'nbr_styles_rated','fav_style','total_ratings'])\n",
     "for key in users_dict:\n",
     "    by_user = {\n",
     "        'user': [users_dict[key][\"user_name\"].iloc[0]],\n",
     "        'total_ba_ratings': [len(users_dict[key])],\n",
     "        'country': [users_dict[key][\"user_country\"].iloc[0]],\n",
-    "        'main_country':[users_dict[key][\"country\"].value_counts().keys()[\n",
+    "        'main_country_rated':[users_dict[key][\"country\"].value_counts().keys()[\n",
     "            users_dict[key][\"country\"].value_counts().argmax()]],\n",
-    "        'nbr_countries':[users_dict[key][\"country\"].nunique()],\n",
+    "        'nbr_countries_rated':[users_dict[key][\"country\"].nunique()],\n",
     "        'fav_country':[users_dict[key].sort_values(by=\"rating\",ascending=False)[\"country\"][:3].value_counts().keys()[\n",
     "            users_dict[key].sort_values(by=\"rating\",ascending=False)[\"country\"][:3].value_counts().argmax()]],\n",
-    "        'main_style': [users_dict[key][\"style\"].value_counts().keys()[\n",
+    "        'main_style_rated': [users_dict[key][\"style\"].value_counts().keys()[\n",
     "            users_dict[key][\"style\"].value_counts().argmax()]],\n",
-    "        'nbr_styles': [users_dict[key][\"style\"].nunique()],\n",
+    "        'nbr_styles_rated': [users_dict[key][\"style\"].nunique()],\n",
     "        'fav_style':[users_dict[key].sort_values(by=\"rating\",ascending=False)[\"style\"][:3].value_counts().keys()[\n",
     "            users_dict[key].sort_values(by=\"rating\",ascending=False)[\"style\"][:3].value_counts().argmax()]],\n",
-    "        'nbr_ratings': [users_dict[key][\"user_nbr_ratings\"].iloc[0]],\n",
+    "        'total_ratings': [users_dict[key][\"user_nbr_ratings\"].iloc[0]],\n",
     "    }\n",
     "    users_summary = pd.concat([users_summary, pd.DataFrame(by_user)], axis=0)\n",
     "    \n",
@@ -1005,7 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "7f26f400",
+   "id": "fc0c667e",
    "metadata": {},
    "outputs": [
     {
@@ -1032,13 +1033,13 @@
        "      <th>user</th>\n",
        "      <th>total_ba_ratings</th>\n",
        "      <th>country</th>\n",
-       "      <th>main_country</th>\n",
-       "      <th>nbr_countries</th>\n",
+       "      <th>main_country_rated</th>\n",
+       "      <th>nbr_countries_rated</th>\n",
        "      <th>fav_country</th>\n",
-       "      <th>main_style</th>\n",
-       "      <th>nbr_styles</th>\n",
+       "      <th>main_style_rated</th>\n",
+       "      <th>nbr_styles_rated</th>\n",
        "      <th>fav_style</th>\n",
-       "      <th>nbr_ratings</th>\n",
+       "      <th>total_ratings</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1052,7 +1053,7 @@
        "      <td>United States</td>\n",
        "      <td>American IPA</td>\n",
        "      <td>24</td>\n",
-       "      <td>American IPA</td>\n",
+       "      <td>German Pilsener</td>\n",
        "      <td>1247</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1078,7 +1079,7 @@
        "      <td>Belgium</td>\n",
        "      <td>Quadrupel (Quad)</td>\n",
        "      <td>21</td>\n",
-       "      <td>Quadrupel (Quad)</td>\n",
+       "      <td>Saison / Farmhouse Ale</td>\n",
        "      <td>412</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1091,7 +1092,7 @@
        "      <td>Belgium</td>\n",
        "      <td>American Double / Imperial IPA</td>\n",
        "      <td>24</td>\n",
-       "      <td>Quadrupel (Quad)</td>\n",
+       "      <td>Gueuze</td>\n",
        "      <td>376</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1104,7 +1105,7 @@
        "      <td>United States</td>\n",
        "      <td>American Pale Ale (APA)</td>\n",
        "      <td>21</td>\n",
-       "      <td>American Porter</td>\n",
+       "      <td>Gose</td>\n",
        "      <td>650</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1117,7 +1118,7 @@
        "      <td>United States</td>\n",
        "      <td>American IPA</td>\n",
        "      <td>45</td>\n",
-       "      <td>American Double / Imperial Stout</td>\n",
+       "      <td>American Double / Imperial IPA</td>\n",
        "      <td>960</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1130,7 +1131,7 @@
        "      <td>United States</td>\n",
        "      <td>American Amber / Red Ale</td>\n",
        "      <td>23</td>\n",
-       "      <td>Quadrupel (Quad)</td>\n",
+       "      <td>Belgian Strong Dark Ale</td>\n",
        "      <td>488</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1141,9 +1142,9 @@
        "      <td>United States</td>\n",
        "      <td>5</td>\n",
        "      <td>Belgium</td>\n",
-       "      <td>American Wild Ale</td>\n",
+       "      <td>American IPA</td>\n",
        "      <td>25</td>\n",
-       "      <td>Russian Imperial Stout</td>\n",
+       "      <td>Saison / Farmhouse Ale</td>\n",
        "      <td>2766</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1156,7 +1157,7 @@
        "      <td>United States</td>\n",
        "      <td>American IPA</td>\n",
        "      <td>54</td>\n",
-       "      <td>American IPA</td>\n",
+       "      <td>American Double / Imperial IPA</td>\n",
        "      <td>2346</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1177,41 +1178,41 @@
        "</div>"
       ],
       "text/plain": [
-       "               user total_ba_ratings        country   main_country  \\\n",
-       "20   AlCaponeJunior               40  United States  United States   \n",
-       "39       ATLbeerDog               39  United States  United States   \n",
-       "41          badbeer               32  United States  United States   \n",
-       "42           baggio               44         Sweden         Sweden   \n",
-       "44        Barnoloid               31  United States  United States   \n",
-       "48      BeerBelcher               93  United States  United States   \n",
-       "59         berley31               32         Canada         Canada   \n",
-       "75     bluejacket74               37  United States  United States   \n",
-       "78         BMMillsy              188  United States  United States   \n",
-       "140      cpetrone84              239  United States  United States   \n",
+       "               user total_ba_ratings        country main_country_rated  \\\n",
+       "20   AlCaponeJunior               40  United States      United States   \n",
+       "39       ATLbeerDog               39  United States      United States   \n",
+       "41          badbeer               32  United States      United States   \n",
+       "42           baggio               44         Sweden             Sweden   \n",
+       "44        Barnoloid               31  United States      United States   \n",
+       "48      BeerBelcher               93  United States      United States   \n",
+       "59         berley31               32         Canada             Canada   \n",
+       "75     bluejacket74               37  United States      United States   \n",
+       "78         BMMillsy              188  United States      United States   \n",
+       "140      cpetrone84              239  United States      United States   \n",
        "\n",
-       "    nbr_countries    fav_country                      main_style nbr_styles  \\\n",
-       "20              3  United States                    American IPA         24   \n",
-       "39              7  United States                    American IPA         25   \n",
-       "41              4        Belgium                Quadrupel (Quad)         21   \n",
-       "42              7        Belgium  American Double / Imperial IPA         24   \n",
-       "44              4  United States         American Pale Ale (APA)         21   \n",
-       "48              7  United States                    American IPA         45   \n",
-       "59              4  United States        American Amber / Red Ale         23   \n",
-       "75              5        Belgium               American Wild Ale         25   \n",
-       "78              7  United States                    American IPA         54   \n",
-       "140             8        Belgium               American Wild Ale         53   \n",
+       "    nbr_countries_rated    fav_country                main_style_rated  \\\n",
+       "20                    3  United States                    American IPA   \n",
+       "39                    7  United States                    American IPA   \n",
+       "41                    4        Belgium                Quadrupel (Quad)   \n",
+       "42                    7        Belgium  American Double / Imperial IPA   \n",
+       "44                    4  United States         American Pale Ale (APA)   \n",
+       "48                    7  United States                    American IPA   \n",
+       "59                    4  United States        American Amber / Red Ale   \n",
+       "75                    5        Belgium                    American IPA   \n",
+       "78                    7  United States                    American IPA   \n",
+       "140                   8        Belgium               American Wild Ale   \n",
        "\n",
-       "                            fav_style nbr_ratings  \n",
-       "20                       American IPA        1247  \n",
-       "39   American Double / Imperial Stout         546  \n",
-       "41                   Quadrupel (Quad)         412  \n",
-       "42                   Quadrupel (Quad)         376  \n",
-       "44                    American Porter         650  \n",
-       "48   American Double / Imperial Stout         960  \n",
-       "59                   Quadrupel (Quad)         488  \n",
-       "75             Russian Imperial Stout        2766  \n",
-       "78                       American IPA        2346  \n",
-       "140                            Gueuze        2184  "
+       "    nbr_styles_rated                         fav_style total_ratings  \n",
+       "20                24                   German Pilsener          1247  \n",
+       "39                25  American Double / Imperial Stout           546  \n",
+       "41                21            Saison / Farmhouse Ale           412  \n",
+       "42                24                            Gueuze           376  \n",
+       "44                21                              Gose           650  \n",
+       "48                45    American Double / Imperial IPA           960  \n",
+       "59                23           Belgian Strong Dark Ale           488  \n",
+       "75                25            Saison / Farmhouse Ale          2766  \n",
+       "78                54    American Double / Imperial IPA          2346  \n",
+       "140               53                            Gueuze          2184  "
       ]
      },
      "execution_count": 14,
@@ -1225,17 +1226,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb6b923a",
+   "id": "fc28ed20",
    "metadata": {},
    "source": [
     "This dataframe summarizes for each user the total number of ratings listed in the matched dataset, the country of the user, the main country where the beers that the user rated are brewed, the number of different countries where the beers that the user rated are brewed, the favorite country of the user, the main style of beers that the user rated, the number of different styles that the user rated, his favorite style and the total number of ratings that the user did.\n",
-    "With this dataframe we can do statistical and correlation analyses, e.g. correlation of the country of the user and prefered style."
+    "With this dataframe we can do statistical and correlation analyses, e.g. correlation of the country of the user and prefered style.\n",
+    "NB: the matched dataset was used in this analysis, thus we don't have all the ratings of each user, however for the project we will not use the matched dataset, we will in fact use the data from ratings.txt and reviews.txt."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71f460d4",
+   "id": "6f384361",
    "metadata": {},
    "outputs": [],
    "source": []
