last changes Lola

--- a/milestone 3/Final.ipynb
+++ b/milestone 3/Final.ipynb
@@ -60,6 +60,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since the BeerAdvocate dataset contains ratings from users and for beers all around the world, it is interesting to investigate where each beer style is produced and where it is rated. In the following we will analyze where each beer style is mainly produced and rated. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 258,
    "metadata": {},
@@ -1244,7 +1251,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also visualize the mean ratings of each supra-style to see if they differ in terms of ratings."
+    "We have in total 15 different supra-styles. Some styles might be more popular then others. We can visualize the mean ratings of each supra-style to see if they differ in terms of ratings."
    ]
   },
   {
