last changes Lola

--- a/milestone 3/Final.ipynb
+++ b/milestone 3/Final.ipynb
@@ -1339,19 +1339,17 @@
    "outputs": [],
    "source": [
     "# summerize the dictionary into a new dataframe \n",
-    "df_summary = pd.DataFrame(columns=['user','total_ba_ratings','country', 'main_country_rated', 'nbr_countries_rated', 'fav_country', 'main_style_rated', 'nbr_styles_rated','fav_style','fav_merged_style','total_ratings'])\n",
+    "df_summary = pd.DataFrame(columns=['user','country', 'main_country_rated', 'nbr_countries_rated', 'fav_country', 'main_style_rated', 'nbr_styles_rated','fav_style','fav_merged_style','total_ratings'])\n",
     "for key in users_dict:\n",
     "    by_user = {\n",
     "        'user': [key],\n",
     "        'country': [users_dict[key][\"user_country\"].iloc[0]],\n",
     "        'main_country_rated':[users_dict[key][\"country\"].value_counts().keys()[\n",
     "            users_dict[key][\"country\"].value_counts().argmax()]],\n",
-    "        'nbr_countries_rated':[users_dict[key][\"country\"].nunique()],\n",
     "        'fav_country':[users_dict[key].sort_values(by=\"rating\",ascending=False)[\"country\"][:3].value_counts().keys()[\n",
     "            users_dict[key].sort_values(by=\"rating\",ascending=False)[\"country\"][:3].value_counts().argmax()]],\n",
     "        'main_style_rated': [users_dict[key][\"style\"].value_counts().keys()[\n",
     "            users_dict[key][\"style\"].value_counts().argmax()]],\n",
-    "        'nbr_styles_rated': [users_dict[key][\"style\"].nunique()],\n",
     "        'fav_style':[users_dict[key].sort_values(by=\"rating\",ascending=False)[\"style\"][:3].value_counts().keys()[\n",
     "            users_dict[key].sort_values(by=\"rating\",ascending=False)[\"style\"][:3].value_counts().argmax()]],\n",
     "        'fav_merged_style':[users_dict[key].sort_values(by=\"rating\",ascending=False)[\"style_merged\"][:3].value_counts().keys()[\n",
@@ -1361,6 +1359,15 @@
     "    df_summary = pd.concat([df_summary, pd.DataFrame(by_user)], axis=0)\n",
     "    \n",
     "df_summary.reset_index(drop=True, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 754,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_summary.to_pickle('./dataframe.pkl')"
    ]
   },
   {
@@ -1726,7 +1733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 751,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1736,24 +1743,12 @@
     "    by_user = {\n",
     "        'user': [key],\n",
     "        'country': [experienced_users_dict[key][\"user_country\"].iloc[0]],\n",
-    "        'main_country_rated_before':[experienced_users_dict[key].iloc[:50][\"country\"].value_counts().keys()[\n",
-    "            experienced_users_dict[key].iloc[:50][\"country\"].value_counts().argmax()]],\n",
-    "        'main_country_rated_after':[experienced_users_dict[key].iloc[-50:][\"country\"].value_counts().keys()[\n",
-    "            experienced_users_dict[key].iloc[-50:][\"country\"].value_counts().argmax()]],\n",
     "        'fav_country_before':[experienced_users_dict[key].iloc[:50].sort_values(by=\"rating\",ascending=False)[\"country\"][:3].value_counts().keys()[\n",
     "            experienced_users_dict[key].iloc[:50].sort_values(by=\"rating\",ascending=False)[\"country\"][:3].value_counts().argmax()]],\n",
     "        'fav_country_after':[experienced_users_dict[key].iloc[-50:].sort_values(by=\"rating\",ascending=False)[\"country\"][:3].value_counts().keys()[\n",
     "            experienced_users_dict[key].iloc[-50:].sort_values(by=\"rating\",ascending=False)[\"country\"][:3].value_counts().argmax()]],\n",
-    "        'main_style_rated_before': [experienced_users_dict[key].iloc[:50][\"style\"].value_counts().keys()[\n",
-    "            experienced_users_dict[key].iloc[:50][\"style\"].value_counts().argmax()]],\n",
-    "        'main_style_rated_after': [experienced_users_dict[key].iloc[-50:][\"style\"].value_counts().keys()[\n",
-    "            experienced_users_dict[key].iloc[-50:][\"style\"].value_counts().argmax()]],\n",
-    "        'fav_style_before':[experienced_users_dict[key].iloc[:50].sort_values(by=\"rating\",ascending=False)[\"style\"][:3].value_counts().keys()[\n",
-    "            experienced_users_dict[key].iloc[:50].sort_values(by=\"rating\",ascending=False)[\"style\"][:3].value_counts().argmax()]],\n",
     "        'fav_merged_style_before':[experienced_users_dict[key].iloc[:50].sort_values(by=\"rating\",ascending=False)[\"style_merged\"][:1].value_counts().keys()[\n",
     "            experienced_users_dict[key].iloc[:50].sort_values(by=\"rating\",ascending=False)[\"style_merged\"][:1].value_counts().argmax()]],\n",
-    "        'fav_style_after':[experienced_users_dict[key].iloc[-50:].sort_values(by=\"rating\",ascending=False)[\"style\"][:3].value_counts().keys()[\n",
-    "            experienced_users_dict[key].iloc[-50:].sort_values(by=\"rating\",ascending=False)[\"style\"][:3].value_counts().argmax()]],\n",
     "        'fav_merged_style_after':[experienced_users_dict[key].iloc[-50:].sort_values(by=\"rating\",ascending=False)[\"style_merged\"][:1].value_counts().keys()[\n",
     "            experienced_users_dict[key].iloc[-50:].sort_values(by=\"rating\",ascending=False)[\"style_merged\"][:1].value_counts().argmax()]],\n",
     "        'total_ratings': [experienced_users_dict[key][\"user_nbr_ratings\"].iloc[0]],\n",
@@ -2634,25 +2629,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As a second approach, we would like to set a threshold to the minimum number of beers such that we take into account the rating of this beer to find the best beers for each style. As we saw before, the distribution of number of beers is very heavy tailed. The median is at 3 ratings for each beer and the 3rd quantile is at 9 beers. We choose a threshold of a minimal number of 3 ratings for each beer.\n",
+    "As a second approach, we would like to set a threshold to the minimum number of beers such that we take into account the rating of this beer to find the best beers for each style. As we saw before, the distribution of number of beers is very heavy tailed. The median is at 3 ratings for each beer and the 3rd quantile is at 9 beers. We choose a threshold of a minimal number of 9 ratings for each beer.\n",
     "\n",
-    "For German users, it was found that the favorite style for experienced users is wild/sour beers and for novice users it is bocks. Thus, we will determine 10 beers for each  category to place on the shelves. "
+    "To illustrate the procedure of picking the beers to place on the shelves for each category of user, we will take experienced and novice German users and sort out the top 5 beers of their favorite style. It was found previously that the favorite style for experienced users is wild/sour beers and for novice users it is bocks. Thus, we will determine 5 top beers for each category to place on the shelves. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 731,
+   "execution_count": 743,
    "metadata": {},
    "outputs": [],
    "source": [
     "# get beer id's that have more than 3 ratings\n",
-    "used_beer_ids_1 = df_germany_experienced.groupby('beer_id')['beer_id'].agg(['count']).loc[df_germany_experienced.groupby('beer_id')['beer_id'].agg(['count'])[\"count\"]>3].reset_index()[\"beer_id\"].values\n",
-    "used_beer_ids_2 = df_germany_novice.groupby('beer_id')['beer_id'].agg(['count']).loc[df_germany_novice.groupby('beer_id')['beer_id'].agg(['count'])[\"count\"]>3].reset_index()[\"beer_id\"].values"
+    "used_beer_ids_1 = df_germany_experienced.groupby('beer_id')['beer_id'].agg(['count']).loc[df_germany_experienced.groupby('beer_id')['beer_id'].agg(['count'])[\"count\"]>8].reset_index()[\"beer_id\"].values\n",
+    "used_beer_ids_2 = df_germany_novice.groupby('beer_id')['beer_id'].agg(['count']).loc[df_germany_novice.groupby('beer_id')['beer_id'].agg(['count'])[\"count\"]>8].reset_index()[\"beer_id\"].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 736,
+   "execution_count": 744,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get average rating for each beer and sort \n",
+    "mean_ratings_1 = df_germany_experienced.groupby('beer_id')['rating'].agg(['mean']).reset_index().sort_values(by=\"mean\",ascending=False).head(5)\n",
+    "mean_ratings_2 = df_germany_novice.groupby('beer_id')['rating'].agg(['mean']).reset_index().sort_values(by=\"mean\",ascending=False).head(5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 749,
    "metadata": {},
    "outputs": [
     {
@@ -2678,101 +2684,147 @@
        "      <th></th>\n",
        "      <th>beer_id</th>\n",
        "      <th>mean</th>\n",
+       "      <th>beer_name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2215</th>\n",
+       "      <th>0</th>\n",
        "      <td>22000</td>\n",
        "      <td>5.0</td>\n",
+       "      <td>Classic</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7886</th>\n",
+       "      <th>1</th>\n",
        "      <td>235041</td>\n",
        "      <td>5.0</td>\n",
+       "      <td>Oude Geuze Cuvée Armand &amp; Gaston</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5017</th>\n",
+       "      <th>2</th>\n",
        "      <td>72369</td>\n",
        "      <td>5.0</td>\n",
+       "      <td>Victor IPA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1851</th>\n",
+       "      <th>3</th>\n",
        "      <td>15578</td>\n",
        "      <td>5.0</td>\n",
+       "      <td>Schorschbräu Donner Bock</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>77</th>\n",
+       "      <th>4</th>\n",
        "      <td>167</td>\n",
        "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1395</th>\n",
-       "      <td>7660</td>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4922</th>\n",
-       "      <td>70330</td>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1890</th>\n",
-       "      <td>16082</td>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5332</th>\n",
-       "      <td>77601</td>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5399</th>\n",
-       "      <td>78820</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td>Celis White</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      beer_id  mean\n",
-       "2215    22000   5.0\n",
-       "7886   235041   5.0\n",
-       "5017    72369   5.0\n",
-       "1851    15578   5.0\n",
-       "77        167   5.0\n",
-       "1395     7660   5.0\n",
-       "4922    70330   5.0\n",
-       "1890    16082   5.0\n",
-       "5332    77601   5.0\n",
-       "5399    78820   5.0"
+       "   beer_id  mean                         beer_name\n",
+       "0    22000   5.0                           Classic\n",
+       "1   235041   5.0  Oude Geuze Cuvée Armand & Gaston\n",
+       "2    72369   5.0                        Victor IPA\n",
+       "3    15578   5.0          Schorschbräu Donner Bock\n",
+       "4      167   5.0                       Celis White"
       ]
      },
-     "execution_count": 736,
+     "execution_count": 749,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# get average rating for each beer and sort \n",
-    "mean_ratings_1 = df_germany_experienced.groupby('beer_id')['rating'].agg(['mean']).reset_index().sort_values(by=\"mean\",ascending=False)\n",
-    "\n"
+    "# get top 5 beers for experienced german users \n",
+    "mean_ratings_1.merge(df_beers[[\"beer_id\",\"beer_name\"]],left_on=\"beer_id\",right_on=\"beer_id\").head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 750,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>beer_id</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>beer_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>79531</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Belzebuth 11,8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>837</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Coors Light</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>43263</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Kloster Kreuzberg Dunkel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>192634</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Maisel &amp; Friends Simcoe Ale</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4295</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Original Oettinger Pils</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   beer_id  mean                    beer_name\n",
+       "0    79531   5.0               Belzebuth 11,8\n",
+       "1      837   5.0                  Coors Light\n",
+       "2    43263   5.0     Kloster Kreuzberg Dunkel\n",
+       "3   192634   5.0  Maisel & Friends Simcoe Ale\n",
+       "4     4295   5.0      Original Oettinger Pils"
+      ]
+     },
+     "execution_count": 750,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df_grouped_by_beer = df_germany_experienced[\"beer_id\",\"rating\",\"\"]"
+    "# get top 5 beers for novice german users\n",
+    "mean_ratings_2.merge(df_beers[[\"beer_id\",\"beer_name\"]],left_on=\"beer_id\",right_on=\"beer_id\").head(5)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
