last changes Lola

--- a/milestone 3/Final.ipynb
+++ b/milestone 3/Final.ipynb
@@ -1953,8 +1953,8 @@
    "outputs": [],
    "source": [
     "# get beer id's that have more than 3 ratings\n",
-    "used_beer_ids_1 = df_experienced.groupby('beer_id')['beer_id'].agg(['count']).loc[df_experienced.groupby('beer_id')['beer_id'].agg(['count'])[\"count\"]>8].reset_index()[\"beer_id\"].values\n",
-    "used_beer_ids_2 = df_novice.groupby('beer_id')['beer_id'].agg(['count']).loc[df_novice.groupby('beer_id')['beer_id'].agg(['count'])[\"count\"]>8].reset_index()[\"beer_id\"].values"
+    "used_beer_ids_1 = df_germany_experienced.groupby('beer_id')['beer_id'].agg(['count']).loc[df_germany_experienced.groupby('beer_id')['beer_id'].agg(['count'])[\"count\"]>8].reset_index()[\"beer_id\"].values\n",
+    "used_beer_ids_2 = df_germany_novice.groupby('beer_id')['beer_id'].agg(['count']).loc[df_germany_novice.groupby('beer_id')['beer_id'].agg(['count'])[\"count\"]>8].reset_index()[\"beer_id\"].values"
    ]
   },
   {
